# os

./: CMakeLists.txt  Cache.cpp  Cache.h  CacheBlock.cpp  CacheBlock.h  CacheFS.cpp  CacheFS.h  ExecMapThread.cpp  ExecMapThread.h  ExecReduceThread.h  FBRCache.cpp  FBRCache.h  File.cpp  File.h  FileDesc.h  LFUCache.cpp  LFUCache.h  LRUCache.cpp  LRUCache.h  Makefile  MapReduceFramework.cpp  MapReduceFramework.h  README  Scheduler.cpp  Scheduler.h  Search.cpp  TEST.cpp  Thread.cpp  Thread.h  ThreadManager.cpp  ThreadManager.h  ex2.tar  main.cpp  output.txt  test.cpp  uthreads.cpp  whatsappClient.cpp  whatsappClient.h  whatsappServer.cpp  whatsappServer.h
ady's_ex5/: CMakeLists.txt  Makefile  whatsappClient  whatsappClient.cpp  whatsappClient.h  whatsappServer  whatsappServer.cpp  whatsappServer.h
ex2/: Instructions  Makefile  README  ThreadManager.cpp  ThreadManager.h  diff.txt  uthreads.cpp
ex3/: ExecMapThread.cpp  ExecReduceThread.cpp  Makefile  MapReduceFramework.cpp  Search.cpp  test.cpp
ex4/: Cache.h  CacheBlock.cpp  CacheFS.cpp  FBRCache.h  FileDesc.cpp  LFUCache.h  LRUCache.h  Makefile  README  TEST.cpp
light_data/: CacheFS.h
